<resources>
    <string name="app_name">iSense</string>
    <string name="exportD">Export</string>
    <string name="sucExport">Successfuly exported file!</string>
    <string name="failExport">Failed to export file!</string>
    <string name="importD">Import</string>
    <string name="dodaj_senzor">Add sensor</string>
    <string name="dodaj_grupo">Add group</string>
    <string name="sort">Sort</string>
    <string name="changeN">change name</string>
    <string name="save">save</string>
    <string name="hint_name">name</string>
    <string name="hint_ip">ip i.e. 192.168.1.1:8080</string>
    <string name="hint_api_key">api key</string>
    <string name="number_of_sensors">number of sensors</string>
    <string name="humidity">humidity</string>
    <string name="no_value">/</string>
    <string name="sensor">sensor</string>
    <string name="grupa">group</string>
    <string name="toast_ni_vse_izpolnjeno">You need to fill all!</string>
    <string name="toast_prevec_senzorjev">Max number of sensors with humidity is 1</string>
    <string name="povezava_uspesna">Connection successful!</string>
    <string name="povezava_neuspesna">Connection failed!</string>
    <string name="vprasanje">Do you want to delete this sensor?</string>
    <string name="delete">Delete</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="vprasanje_brisanje_grupe">Deleting the group will also delete all sensors in the group. Do you want to delete the group?</string>
    <string name="neuspesen_prizig_senzorja">Failed to turn on sensor </string>
    <string name="neuspeseno_ugasanje_senzorja">Failed to turn off sensor </string>
    <string name="turningOnSensor">turning on sensor</string>
    <string name="turningOnGroup">turning on group</string>
    <string name="turningOffSensor">turning off sensor</string>
    <string name="turningOffGroup">turning off group</string>
</resources>
