<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ozadje">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddSenzorActivity">

        <EditText
            android:id="@+id/editTextname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintBottom_toTopOf="@+id/editTextip1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/hint_ip"
            android:inputType="text"
            android:maxLength="25"
            app:layout_constraintBottom_toTopOf="@+id/editTexttoken1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTexttoken1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/hint_api_key"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintBottom_toTopOf="@+id/editTextNS1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/applay_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_button1"
            app:srcCompat="@drawable/ic_check_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/test_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_network_check_black_48dp"
            tools:layout_editor_absoluteX="152dp" />

        <CheckBox
            android:id="@+id/checkBoxH1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:checked="false"
            android:text="@string/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNS1" />

        <EditText
            android:id="@+id/editTextNS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/number_of_sensors"
            android:inputType="number"
            android:maxLength="1"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxH1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/color_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rgb_color"
            android:src="@drawable/rgb_color"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/test_button1" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/test_button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxH1">

            <LinearLayout
                android:id="@+id/imena_podsenzorjev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>